# ColaborativeMPC-

./: .gitignore  .gitmodules  .~lock.plan.odt#  ECC conference paper notes.odt  Paper draft.odt  README.md  notes.md  plan.odt  requirements.txt
ROS/src/planner_experiments/: CMakeLists.txt  package.xml  setup.py
ROS/src/planner_experiments/launch/: LPV_car_spawner.launch  NL_car_spawner.launch  experiment.launch
ROS/src/planner_experiments/msg/: agent_info.msg
ROS/src/planner_experiments/src/: LPV_ROS_main.py  OCD_ROS_main.py  main_plotter.py  readme.md
ROS/src/planner_experiments/src/IOmodule_ROS/: IOmodule.py
ROS/src/planner_experiments/src/config_files/: config_LPV.py  config_NL.py
ROS/src/planner_experiments/src/data/LPVR_agent/: settings.csv
ROS/src/planner_experiments/src/data/LPVt_agent/: settings.csv
ROS/src/planner_experiments/src/data/NL3_agent_sht/: settings.csv
ROS/src/planner_experiments/src/data/NLR_test/: settings.csv
ROS/src/planner_experiments/src/data/NLR_test_sh/: settings.csv
ROS/src/planner_experiments/src/data/NLR_test_sh3/: settings.csv
ROS/src/planner_experiments/src/utilities_ROS/: utilities_ros.py
experiments/test-bench/catkin_mrs/src/colab_mpc/: CMakeLists.txt  package.xml
experiments/test-bench/catkin_mrs/src/colab_mpc/config/: agents.yaml  experiment.yaml  model.yaml
experiments/test-bench/catkin_mrs/src/colab_mpc/launch/: control_mrs.launch  control_spawner.launch
experiments/test-bench/catkin_mrs/src/colab_mpc/src/: .~lock.PaperNotes.odt#  LPV_HP_N.py  NL_EU_N.py  NL_HP_N.py  PaperNotes.odt  controllerMain.py  (+36 more)
(+1093 files in other folders)
