<?xml version="1.0"?>
<package>
  <name>planner_experiments</name>
  <version>0.4.0</version>
  <description>LPV DMPC planner </description>
  <maintainer email="marc.facerias@upc.edu"></maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
