<?xml version="1.0"?>
<package>
  <name>colab_mpc</name>
  <version>0.0.0</version>
  <description>colab mpc </description>
  <license>TODO</license>
  <maintainer email="mcr2@todo.todo">mcr2</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>lpv_mpc</build_depend>

  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>lpv_mpc</run_depend>

</package>
